--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,5 +11,9 @@ services:
       - ./script/mysql/:/docker-entrypoint-initdb.d/
     ports:
       - 13306:3306
-#  redis:
-#    image: redis:7.0.8
+  redis:
+    image: redis:latest
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+    ports:
+      - 16379:6379
