--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,10 +10,17 @@ services:
     volumes:
       - ./script/mysql/:/docker-entrypoint-initdb.d/
     ports:
-      - 13306:3306
+      - "13306:3306"
   redis:
     image: redis:latest
     environment:
       - ALLOW_EMPTY_PASSWORD=yes
     ports:
-      - 16379:6379
+      - "16379:6379"
+
+  etcd:
+    image: bitnami/etcd:latest
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+    ports:
+      - "12379:2379"
