--- a/config/dev.yaml
+++ b/config/dev.yaml
@@ -5,3 +5,9 @@ redis:
   addr: "127.0.0.1:6379"
 kafka:
   addrs: "127.0.0.1:9094"
+grpc:
+  client:
+    intr:
+      addr: "127.0.0.1:8090"
+      threshold: 100
+      secure: false
